Attempting to fix the following issues
 - BCN-1177 - Category tiles look squashed on small screen desktop
 - BCNF-138 - Keyboard obscures text input on mobile/tablet devices

--- a/scss/bcn-discourse/_bcn-categories.scss
+++ b/scss/bcn-discourse/_bcn-categories.scss
@@ -15,6 +15,18 @@
     background: $pink200;
     box-shadow: 0px 6px 8px rgba(85, 18, 70, 0.35);
     border-radius: 30px;
+
+    @media (min-width: $break-sm) {
+      width: 48%;
+    }
+
+    @media (min-width: $break-md) {
+      width: 31%;
+    }
+
+    @media (min-width: $break-lg) {
+      width: 23%;
+    }
     
   }
   .category-box-inner {
